--- a/index.html
+++ b/index.html
@@ -1278,6 +1278,8 @@
                                                 </a>
                                               </article>
                                             </li>
+                                            
+                                            <!--Code Start for card-->
                                             <li
                                               class="splide__slide slide slide--4"
                                             >
@@ -1330,6 +1332,197 @@
                                                           <p>
                                                             <span
                                                               >In this World Bank Yemen assignment, we i) obtained sectoral data/inputs in water and sanitation, urban mobility, solid waste management, energy and housing sectors required for the World Bank CURB tool, and ii) carried out inclusive and gender segregated community consultation to revalidate the prioritized low carbon development interventions proposed by the World Bank.</span
+                                                            >
+                                                          </p>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                  </div>
+                                                </a>
+                                              </article>
+                                            </li>
+                                            <!--Code End for card-->
+
+                                             <!--Code Start for card-->
+                                            <li
+                                              class="splide__slide slide slide--4"
+                                            >
+                                              <article
+                                                class="node node--type-page node--promoted node--view-mode-card max-width-xs"
+                                              >
+                                                <a
+                                                  href="https://www.germanwatch.org/en/node/91122"
+                                                  class="card text-decoration-none link-dark teaser-hover-parent"
+                                                >
+                                                  <div class="card">
+                                                    <div
+                                                      class="field field--name-field-image field--type-entity-reference field--label-hidden field__item"
+                                                    >
+                                                      <div
+                                                        class="media media--type-image media--view-mode-card"
+                                                      >
+                                                        <div
+                                                          class="position-relative d-inline-block"
+                                                        >
+                                                          <div
+                                                            class="field field--name-field-media-image field--type-image field--label-hidden field__item"
+                                                          >
+                                                            <img
+                                                              loading="lazy"
+                                                              class="border border-primary card-img-top img-fluid image-style-card-sm"
+                                                              src="sites/img/waste.png"
+                                                              width="535"
+                                                              height="268"
+                                                              alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
+                                                            />
+                                                          </div>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+
+                                                    <div class="card-body">
+                                                      <h3
+                                                        class="card-title h4 fw-semibold"
+                                                      >
+                                                        <span
+                                                          class="field field--name-title field--type-string field--label-hidden"
+                                                          >Solid Waste Management Eval-uation</span
+                                                        >
+                                                      </h3>
+                                                      <div class="lh-base fs-5">
+                                                        <div
+                                                          class="text-formatted d-inline-all field field--name-field-header-text field--type-text-long field--label-hidden field__item"
+                                                        >
+                                                          <p>
+                                                            <span
+                                                              >The objective of this World Bank Yemen assignment was to i) collect baseline data and design an output-based aid project to incen-tivize service providers to expand primary collection to underserved areas, ii) improve city-wide waste collection, and iii) identify opportu-nities to improve conditions for women and marginalized groups working in the waste cycle.</span
+                                                            >
+                                                          </p>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                  </div>
+                                                </a>
+                                              </article>
+                                            </li>
+                                            <!--Code End for card-->
+
+                                            <!--Code Start for card-->
+                                            <li
+                                              class="splide__slide slide slide--4"
+                                            >
+                                              <article
+                                                class="node node--type-page node--promoted node--view-mode-card max-width-xs"
+                                              >
+                                                <a
+                                                  href="https://www.germanwatch.org/en/node/91122"
+                                                  class="card text-decoration-none link-dark teaser-hover-parent"
+                                                >
+                                                  <div class="card">
+                                                    <div
+                                                      class="field field--name-field-image field--type-entity-reference field--label-hidden field__item"
+                                                    >
+                                                      <div
+                                                        class="media media--type-image media--view-mode-card"
+                                                      >
+                                                        <div
+                                                          class="position-relative d-inline-block"
+                                                        >
+                                                          <div
+                                                            class="field field--name-field-media-image field--type-image field--label-hidden field__item"
+                                                          >
+                                                            <img
+                                                              loading="lazy"
+                                                              class="border border-primary card-img-top img-fluid image-style-card-sm"
+                                                              src="sites/img/chain.png"
+                                                              width="535"
+                                                              height="268"
+                                                              alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
+                                                            />
+                                                          </div>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+
+                                                    <div class="card-body">
+                                                      <h3
+                                                        class="card-title h4 fw-semibold"
+                                                      >
+                                                        <span
+                                                          class="field field--name-title field--type-string field--label-hidden"
+                                                          >Value Chain Assessment</span
+                                                        >
+                                                      </h3>
+                                                      <div class="lh-base fs-5">
+                                                        <div
+                                                          class="text-formatted d-inline-all field field--name-field-header-text field--type-text-long field--label-hidden field__item"
+                                                        >
+                                                          <p>
+                                                            <span
+                                                              >In this World Bank assignment, we conducted i) a rapid mapping and assessment Yemen’s construction sector value chain, include manufacturing, contracting, and related service firms, relevant to reconstruction demand, and ii) identified development options for government and partners to strengthen Yemeni firms’ cabilities to service reconstruction demand.</span
+                                                            >
+                                                          </p>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                  </div>
+                                                </a>
+                                              </article>
+                                            </li>
+                                            <!--Code End for card-->
+
+                                            <li
+                                              class="splide__slide slide slide--4"
+                                            >
+                                              <article
+                                                class="node node--type-page node--promoted node--view-mode-card max-width-xs"
+                                              >
+                                                <a
+                                                  href="https://www.germanwatch.org/en/node/91122"
+                                                  class="card text-decoration-none link-dark teaser-hover-parent"
+                                                >
+                                                  <div class="card">
+                                                    <div
+                                                      class="field field--name-field-image field--type-entity-reference field--label-hidden field__item"
+                                                    >
+                                                      <div
+                                                        class="media media--type-image media--view-mode-card"
+                                                      >
+                                                        <div
+                                                          class="position-relative d-inline-block"
+                                                        >
+                                                          <div
+                                                            class="field field--name-field-media-image field--type-image field--label-hidden field__item"
+                                                          >
+                                                            <img
+                                                              loading="lazy"
+                                                              class="border border-primary card-img-top img-fluid image-style-card-sm"
+                                                              src="sites/img/water.png"
+                                                              width="535"
+                                                              height="268"
+                                                              alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
+                                                            />
+                                                          </div>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+
+                                                    <div class="card-body">
+                                                      <h3
+                                                        class="card-title h4 fw-semibold"
+                                                      >
+                                                        <span
+                                                          class="field field--name-title field--type-string field--label-hidden"
+                                                          >Water Supply and Sanitation Evaluation</span
+                                                        >
+                                                      </h3>
+                                                      <div class="lh-base fs-5">
+                                                        <div
+                                                          class="text-formatted d-inline-all field field--name-field-header-text field--type-text-long field--label-hidden field__item"
+                                                        >
+                                                          <p>
+                                                            <span
+                                                              >The objective of this World Bank Yemen assignment was to assess the functionality status of 55 rehabilitated water supply and sanitation schemes, their perfor-mance, sustainability, and resil-ience, and provide recommenda tions for their continued operation and future project financing in a fragile context compounded by the impact of climate change.</span
                                                             >
                                                           </p>
                                                         </div>
