--- a/index.html
+++ b/index.html
@@ -1806,9 +1806,9 @@
                                                                 <picture>
                                                                   <img
                                                                     loading="lazy"
-                                                                    class="border border-primary img-fluid"
-                                                                    width="250"
-                                                                    height="350"
+                                                                    class="border border-primary"
+                                                                    width="300"
+                                                                    height="240"
                                                                     src="sites/img/drone.png"
                                                                     alt="Preview image"
                                                                   />
@@ -1928,9 +1928,9 @@
                                                                 <picture>
                                                                   <img
                                                                     loading="lazy"
-                                                                    class="border border-primary img-fluid"
-                                                                    width="176"
-                                                                    height="176"
+                                                                    class="border border-primary"
+                                                                    width="300"
+                                                                    height="240"
                                                                     src="sites/img/dem.jpg"
                                                                     alt="Preview policy brief"
                                                                   />
