removed unnecessary from navbar

--- a/index.html
+++ b/index.html
@@ -196,59 +196,6 @@
                       >
                         About us
                       </button>
-                      <div
-                        class="submenu-container position-fixed below-header start-0 end-0 bottom-0 active-fade"
-                      >
-                        <div class="bg-light submenu-content">
-                          <div class="container">
-                            <div class="submenu py-48 row submenu-description">
-                              <div class="offset-xl-1 col-lg-5 col-xl-4 py-10">
-                                <h3>
-                                  <span
-                                    class="text-decoration-none"
-                                    title="About us"
-                                    >Observing. Analysing. Acting.</span
-                                  >
-                                </h3>
-
-                                <div
-                                  class="field field--name-field-description field--type-string-long field--label-hidden field__item"
-                                >
-                                  <div class="fs-5">
-                                    For Global Equity and the Preservation of
-                                    Livelihoods.
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="col-lg-7 col-xl-6">
-                                <ul class="menu menu-level-1">
-                                  <li class="nav-item d-inline-grid w-100">
-                                    <a
-                                      href="en/about.html"
-                                      class="nav-link nav-link--en-about pt-10 link-primary pb-10 px-0 fw-semibold"
-                                      data-drupal-link-system-path="node/87574"
-                                      >About us</a
-                                    >
-                                  </li>
-                                  <li class="nav-item d-inline-grid w-100">
-                                    <a
-                                      href="en/members-staff.html"
-                                      class="nav-link nav-link--en-members-staff pt-10 link-primary pb-10 px-0 fw-semibold"
-                                      data-drupal-link-system-path="node/14483"
-                                      >Board of Directors &amp; Staff</a
-                                    >
-                                  </li>
-                                </ul>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <button
-                          class="submenu-close position-absolute top-0 start-0 end-0 bottom-0 z-n1"
-                        >
-                          <span class="visually-hidden">Close submenu</span>
-                        </button>
-                      </div>
                     </li>
                     <li
                       class="nav-item menu-item--expanded header-height menu-item--expanded-level-0"
@@ -259,88 +206,7 @@
                       >
                         Publications
                       </button>
-                      <div
-                        class="submenu-container position-fixed below-header start-0 end-0 bottom-0 active-fade"
-                      >
-                        <div class="bg-light submenu-content">
-                          <div class="container">
-                            <div class="submenu py-48 row submenu-description">
-                              <div class="offset-xl-1 col-lg-5 col-xl-4 py-10">
-                                <h3>
-                                  <span
-                                    class="text-decoration-none"
-                                    title="Publications"
-                                    >Publications</span
-                                  >
-                                </h3>
-
-                                <div
-                                  class="field field--name-field-description field--type-string-long field--label-hidden field__item"
-                                >
-                                  <div class="fs-5">
-                                    Expert publications and outreach.
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="col-lg-7 col-xl-6">
-                                <ul class="menu menu-level-1">
-                                  <li class="nav-item d-inline-grid w-100">
-                                    <a
-                                      href="en/search-publications.html"
-                                      class="nav-link nav-link--en-search-publications pt-10 link-primary pb-10 px-0 fw-semibold"
-                                      data-drupal-link-system-path="node/14446"
-                                      >Publications &amp; Search</a
-                                    >
-                                  </li>
-                                  <li class="nav-item d-inline-grid w-100">
-                                    <a
-                                      href="en/blog.html"
-                                      class="nav-link nav-link--en-blog pt-10 link-primary pb-10 px-0 fw-semibold"
-                                      data-drupal-link-system-path="node/15210"
-                                      >Germanwatch Blog</a
-                                    >
-                                  </li>
-                                  <li
-                                    class="nav-item menu-item--expanded d-inline-grid w-100 pb-10"
-                                  >
-                                    <a
-                                      href="en/indices.html"
-                                      class="nav-link nav-link--en-indices d-flex align-items-center h-100 pt-10 link-primary pb-0 px-0 fw-semibold"
-                                      data-drupal-link-system-path="node/14456"
-                                      >Indices</a
-                                    >
-                                    <ul
-                                      class="menu menu-level-2 d-grid fs-5 gap-2 list-unstyled"
-                                    >
-                                      <li class="nav-item">
-                                        <a
-                                          href="en/CCPI.html"
-                                          class="nav-link nav-link--en-ccpi pb-10 px-0 fw-semibold fs-6 py-3"
-                                          data-drupal-link-system-path="node/14457"
-                                          >Climate Change Performance Index</a
-                                        >
-                                      </li>
-                                      <li class="nav-item">
-                                        <a
-                                          href="en/cri.html"
-                                          class="nav-link nav-link--en-cri pb-10 px-0 fw-semibold fs-6 py-3"
-                                          data-drupal-link-system-path="node/14460"
-                                          >Climate Risk Index</a
-                                        >
-                                      </li>
-                                    </ul>
-                                  </li>
-                                </ul>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <button
-                          class="submenu-close position-absolute top-0 start-0 end-0 bottom-0 z-n1"
-                        >
-                          <span class="visually-hidden">Close submenu</span>
-                        </button>
-                      </div>
+                      
                     </li>
                     
                   </ul>
@@ -792,7 +658,7 @@
                                   <div
                                     class="text-center paragraph paragraph--type--heading paragraph--view-mode--default"
                                   >
-                                    <h2>What We Do - Project Focus Areas</h2>
+                                    <h2>What We Do</h2>
                                     <p><b>Development Monitors </b> provides donors and governments with a range of core services in multiple fields, including agriculture; water resources and disaster risk management; water supply diagnostic and decision support; drone-based community assessment; climate-resilient infrastructure; low-carbon development; value chain assessment; and water supply and sanitation, solid waste management, and school infrastructure technical assessments.​</p>
                                   </div>
                                   <div
