--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/wrm.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="The Climate Case: Saúl vs. RWE"
                                                             />
@@ -933,7 +933,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/ddst.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Skyline der Stadt Baku"
                                                             />
@@ -992,7 +992,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/rms.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
                                                             />
@@ -1051,7 +1051,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/dr.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
                                                             />
@@ -1112,7 +1112,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/flood2.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Ein Berg mit Schnee und Windrädern vor blauem Himmel"
                                                             />
@@ -1169,7 +1169,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/cri.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
                                                             />
@@ -1228,7 +1228,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/cripd.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
                                                             />
@@ -1287,7 +1287,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/water.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
                                                             />
@@ -1346,7 +1346,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/waste.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
                                                             />
@@ -1407,7 +1407,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/see.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
                                                             />
@@ -1472,7 +1472,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/lcd.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
                                                             />
@@ -1537,7 +1537,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/chain.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Viele Zukunftskläger:innen stehen vor dem Kanzleramt"
                                                             />
@@ -1596,7 +1596,7 @@
                                                               loading="lazy"
                                                               class="border border-primary card-img-top img-fluid image-style-card-sm"
                                                               src="sites/img/agr2.png"
-                                                              width="535"
+                                                              width="575"
                                                               height="268"
                                                               alt="Eine Kuhherde in einer Dürrenlandschaft"
                                                             />
@@ -2007,7 +2007,7 @@
                     id="block-social-media-menu"
                     class="text-primary fw-normal mb-32"
                   >
-                    All inquires and messages should be sent via email to ITAdmin@developmentmonitors.com
+                    <span style="color:black;">All inquires and messages should be sent via email to</span> ITAdmin@developmentmonitors.com
                   </h4>
                 </nav>
                 
